# stable-diffusion-v2

./: .env.example  .gitignore  README.md  compute_clip_score.py  compute_fid_score.py  download_artifact.py  environment.yaml  install_git_lfs.sh  job.job  pyproject.toml  setup_snellius.md  snellius_uv_generate.sh  snellius_uv_setup.sh  thijmen.md
apps/attention_viewer/: app.py
jobs/: img2text_aligner.job  img2text_aligner_coco.job  img2text_aligner_flickr.job  img2text_aligner_flickr_coco.job  inference.job  run_ablation_different_losses.sh  run_different_alpha_jobs.sh  run_different_pno.sh  run_iason.sh  run_main_results.sh  run_main_results_alpha_0.sh  run_single_alpha.sh  run_single_alpha_fuse.sh  run_single_pno.sh  test_merge.sh  test_merge_single_run.sh
jobs/final_results/: main_results.sh
jobs/h100/: img2text_aligner_coco.job  img2text_aligner_flickr.job  img2text_aligner_flickr_coco.job  run_different_losses.sh  run_different_losses_old.sh  run_different_lossesv2.sh
jobs/h100/train_aligners/: train_aligner_single.sh  train_aligners.sh
ldm/models/diffusion/: ddim.py  ddpm.py
ldm/modules/: attention.py
ldm/modules/diffusionmodules/: openaimodel.py
ldm/modules/encoders/: modules.py
ldm/modules/vcf/: aligner.py  aligner_old.py  alignerv2.py  mapperv2.py
scripts/: debug_features.py  imgtxt2img.py  txt2img.py  txt2img_attn.py
scripts/quantitative_metrics/: compute_clip_score.py  compute_fid_score.py
scripts/vcf/: pno.py  train_img2text_aligner.py  train_img2text_aligner_old.py  train_img2text_alignerv2.py  train_img2text_mapperv2.py
